ADD DEVILED EGGS AND MODIFIED ALL OTHER RECIPES
added a new deviled eggs file and edited all other recipes

--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>recipe page one</title>
+    <title>jollof rice</title>
 </head>
 
 <body>
