--- a/recipes/basted-eggs.html
+++ b/recipes/basted-eggs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>recipe page three</title>
+    <title>jollof rice</title>
 </head>
 
 <body>
