DOCS: RECOMMIT ENTIRE REPO FOR THE SECOND TIME
I was off for a long time. So I refreshed my memory by redoing "project recipes".
I think I'm good with html now.

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>recipe index</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main Page</title>
 </head>
-
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/jollof-rice.html" title="page one" target="_blank">Jollof Rice</a></li>
-        <li><a href="./recipes/brownies.html" title="page two" target="_blank">Brownies</a></li>
-        <li><a href="./recipes/basted-eggs.html" title="page three" target="_blank">Basted Eggs</a></li>
-        <li><a href="./recipes/deviled-eggs.html" title="page four" target="_blank">Deviled Eggs</a></li>
+        <li><em><a href="./recipes/basted-eggs.html" target="_blank">Basted eggs</a></em></li>
+        <li><em><a href="./recipes/brownies.html" target="_blank">Brownies</a></em></li>
+        <li><em><a href="./recipes/deviled-eggs.html" target="_blank">Deviled eggs</a></em></li>
+        <li><em><a href="./recipes/jollof-rice.html" target="_blank">Jollof rice</a></em></li>
     </ul>
 </body>
 </html>
