--- a/recipes/basted-eggs.html
+++ b/recipes/basted-eggs.html
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>jollof rice</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basted Eggs</title>
 </head>
-
 <body>
     <h1>Basted Eggs</h1>
-    <img src="../img/basted-eggs.jpg" alt="picture of basted eggs">
-    <h2>Description</h2>
-    <p>This recipe produces a delicious, simple egg with satisfying, set whites and a creamy, runny yolk. It's similar to a poached egg, but more flavorful and less fussy.</p>
+    <img src="../img/basted-eggs.jpg" alt="image of basted-eggs">
+    <h2>Basted eggs are the shit.</h2>
+    <p>I don't even know what basted eggs are.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>1½ tablespoons salted butter </li>
-        <li>2 large eggs</li>
-        <li>1 tablespoon water</li>
-        <li>⅛ teaspoon freshly ground black pepper</li>
-        <li>1 pinch flaky sea salt, or to taste</li>
+        <li>ingredint 1</li>
+        <li>ingredint 2</li>
+        <li>ingredint 3</li>
+        <li>ingredint 4</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li>Melt butter in a medium nonstick skillet over medium heat. Carefully crack eggs into the skillet and let cook until whites have almost set, about 1 minute. Add water, cover skillet with a lid or cookie sheet, reduce heat to medium-low, and let cook until whites have set, yolks are still runny, and some of white has set over yolk, 1 to 2 more minutes. Remove lid and transfer eggs to a serving plate. Garnish with pepper and flaky salt, if desired. Serve immediately.</li>
+        <li>Step 1</li>
+        <li>Step 2</li>
+        <li>Step 3</li>
+        <li>Step 4</li> 
     </ol>
-    <div><a href="../index.html" title="Odin Recipes">Return to Homepage</a></div>    
+    <div><a href="../index.html">Return to Homepage</a></div>
 </body>
 </html>
